--- a/index.rmd
+++ b/index.rmd
@@ -1,18 +1,22 @@
 ---
 title: <center> Rapport d'étude statistique pour UNICEF Argentine </center>
 date: "`r Sys.Date()`"
-author: "Rahma GUETIB M1 MECI - cabinet d'étude SOCIODEV"
+author : "Rahma GUETIB M1 MECI - cabinet d'étude SOCIODEV"
 output:
-  rmdformats::robobook:
-    highlight: kate
+  rmdformats::downcute:
+    self_contained: true
+    default_style: "light"
+    downcute_theme: "default"
 ---
+
 
 ```{r setup, include=FALSE}
 ## Global options
 knitr::opts_chunk$set(cache = TRUE)
 ```
 
-# Introduction et rappel du besoin
+
+# **Introduction et rappel du besoin**
 
 La division Argentine de l'UNICEF souhaite proposer deux types de programme de cash transfert, en plus d'interventions déjà mise en place notamment dans le contexte de crise sanitaire de Covid-19. Il s'agit de transferts monétaires vers des ménages ciblés. Ces deux types de programme sont destinés à des populations spécifiques d'Argentine résidants en dehors de la capitale (Buenos Aires). Ils ont pour but d'aider ces derniers à faire face à la crise sanitaire. Ces deux programmes sont les suivants : 
   
@@ -33,12 +37,12 @@ Pour ce faire, nous procederons en plusieurs étapes.
 *A la fin de ce rapport se trouve une annexe où l'on peut y retrouver des graphiques complémentaires qui ne sont pas forcement très pertinents à mettre dans le corps de l'étude mais qui reste important pour l'analyse (nous les mettons donc en annexe pour information). On peut également y retrouver le code R qui a été nécéssaire à la réalisation de cette étude*
 
 
-# Discussion du cadre théorique
+# **Discussion du cadre théorique (revue de littérature)**
 
-L'Argentine est la deuxième puissance économique d'Amerique Latine après le Brésil si l'on raisonne en PIB nominal (PIB en prix courant, non corrigé de l'inflation). Pleinnes d'avantages tel que sa richesse agricole, ses capacités industrielles (mines) ou encore une main-d'oeuvre qualifiée importante, l'Argentine connait aussi un fort niveau de chômage, de l'inflation, des difficultés financières, et des inégalités sociales importantes qui s'accroissent. De ce fait, l'Argentine à souvent eu recours à des orgnisations économiques internationales tel que le FMI (Fond Monétaire International qui a, entre autres, pour but de garantir la stabilité finacière des pays).
+L'Argentine est la deuxième puissance économique d'Amerique Latine après le Brésil si l'on raisonne en PIB nominal (PIB en prix courant, non corrigé de l'inflation). Pleines d'avantages tel que sa richesse agricole, ses capacités industrielles (mines) ou encore une main-d'oeuvre qualifiée importante, l'Argentine connait aussi un fort niveau de chômage, de l'inflation, des difficultés financières, et des inégalités sociales importantes qui s'accroissent. De ce fait, l'Argentine à souvent eu recours à des orgnisations économiques internationales tel que le FMI (Fond Monétaire International qui a, entre autres, pour but de garantir la stabilité financière des pays).
 Concernant les inégalités sociales, on comprends donc que l'Argentine est caractérisée par des provinces developpées et d'autres qui le sont moins.
 
-L'objet de notre étude est de différencier les provinces argentines en deux groupes : celles qui sont developpées et celles qui sont plutôt pauvre pour in fine determiner les deux plus développées ainsi que les deux plus pauvres. Pour cela nous diposons d'une base de données composées de 10 variables et de 22 observations. 
+L'objet de notre étude est de différencier les provinces argentines en deux groupes : celles qui sont developpées et celles qui sont plutôt pauvres pour *in fine* determiner les deux plus développées ainsi que les deux plus pauvres. Pour cela nous disposons d'une base de données composées de 10 variables et de 22 observations.
 Les variables sont les suivantes : 
 
 - **gdp** : le PIB en dollar
@@ -55,21 +59,21 @@ Les variables sont les suivantes :
 
 - **birth_mortal** : le taux de mortalité infantile (taux pour 1000 naissances vivantes)
 
-- **pop** : la population qui est le total des habitants
+- **pop** : la population (le total des habitants)
 
 - **movie_theatres_per_cap** : les salles de cinémas disponible (par habitants)
 
-- **doctors** : nombre de médecins par habitants
+- **doctors** : le nombre de médecins par habitants
 
 
-Tout d'abord, nous retirerons la ville-province de Buenos Aires car les transferts monétaires seront uniquement à destination des argentins qui résident en dehors de Buenos Aires. Nous avons donc finalement 21 observations. 
-Aussi, nous utiliserons la variable "**pop_per_cap**" correspondant au PIB par habitant. En effet, il n'est pas jusdicieud'utiliser le seul PIB sans le rapporter au nombre d'habitant : les comparaisons entre des régions de taille diverses peu être fortement biaisé et les interpretations aussi
+Tout d'abord, nous retirerons la ville-province de Buenos Aires car les transferts monétaires seront uniquement à destination des argentins qui résident en dehors de Buenos Aires. Nous avons donc finalement 21 observations.
+Aussi, nous utiliserons la variable "**pop_per_cap**" correspondant au PIB par habitant. En effet, il n'est pas jusdicieu d'utiliser le seul PIB sans le rapporter au nombre d'habitant : les comparaisons entre des régions de taille diverses peuvent être fortement biaisées et les interpretations aussi.
 Nous procédons aussi à un changement concernant la varibale "**movie_theatres_per_cap**" : au lieu d'avoir ce ratio par habitant nous avons décidé de l'avoir pour 100 000 habitants. Nous prenons en compte cette variable car nous pouvons penser qu'une province developpée disposera d'un plus grand nombre de cinéma, ce qui ne sera pas frocement le cas des provinces les moins developpées. 
 
 Nous ne nous sommes pas arrêtés là concernant le choix des variables : il n'est pas très pertinent de toutes les garder, même après ces modifications. 
-En effet, nous avons par exemple retirer la variable "birth_mortal" qui rend compte du taux de mortalité infantile : selon la [Banque Mondiale](https://donnees.banquemondiale.org/indicator/SH.DYN.MORT?locations=AR), ce taux n'a cessé de baisser depuis les années 1970 et est assez bas en 2020 (8 enfants de moins de 5 ans pour 1000 habitant en 2020 meurt à la naissance quand 72 mourraient en 1972).
+En effet, nous avons par exemple retirer la variable "birth_mortal" qui rend compte du taux de mortalité infantile : selon la Banque Mondiale dans une étude [disponible ici](https://donnees.banquemondiale.org/indicator/SH.DYN.MORT?locations=AR), ce taux n'a cessé de baisser depuis les années 1970 et est assez bas en 2020 (8 enfants de moins de 5 ans pour 1000 habitant en 2020 meurt à la naissance quand 72 mourraient en 1972).
 Egalement, dans la mesure où le manque d'infrastructure est un problème dans toute l'Argentine, et plus globalement dans toute l'Amérique du Sud (d'après l'étude "Time to address the infrastructure gap in Latin america" datant de 2017 de P.Krause pour Coface) nous ne pensons donc pas que cette variable puisse rendre compte de la pauvreté dans les provinces d'argentine ; nous l'avons donc retirer.
-Aussi, nous n'avons pas connaissance d'un nombre signficatif d'écoles abandonnées dans tel province et pas dans tel autre en Argentine, ni seulement connaissance de ce phénomène qui soit assez signficatif dans tout le pays. C'est pourquoi, nous décidons de ne pas prendre en compte la variable "school_dropout".
+Aussi, nous n'avons pas connaissance d'un nombre signficatif d'écoles abandonnées dans tel province et plutôt que dans tel autre en Argentine, ni seulement connaissance de ce phénomène qui soit assez signficatif dans tout le pays. C'est pourquoi, nous décidons de ne pas prendre en compte la variable "**school_dropout**".
 
 Parmi les variables que nous avons gardé il y a "**no_healthcare**". En effet, l'Argentine est un Etat fédérale qui accorde beaucoup de liberté aux provinces notamment en matière de santé. Ce faisant, d'après la Banque Mondiale (El Sector Salud Argentino : Situacion Actual y Opciones para Mejorar su Desempeno, Documento del Banco Mundial, Reporte n° 26144-AR, Julio de 2003.), le système de santé Argentin est inéquitable dans la mesure où il ne garantit pas l'accès aux soins aux populations qui n'ont pas de couverture de santé et il y a des disparités territoriales en terme d'offre de soins. La variable "no_helathcare" pourrait donc être prise en compte pour caractériser les provinces les moins développées.
 La varibale "**poverty**" rendant compte des personnes se situant sous le seuil de pauvreté peut également etre prise en compte pour caractériser ces provinces. 
@@ -77,64 +81,64 @@ L'accès à l'éducation est un critère de developpement d'un pays, d'une régi
 
 
 
-# Description des données 
+# **Description des données**
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 arg <- read.csv(file = "https://48652267-876637319111280815.preview.editmysite.com/uploads/4/8/6/5/48652267/argentina.csv",
          header = T,
          sep = ",")
 ```
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 name<-arg$province
 row.names(arg)=name
 arg<-arg[,c(-1)]
 ```
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #PIB/hab:
 gdp_per_cap <- arg$gdp/arg$pop
 arg$gdp_per_cap <- gdp_per_cap
 arg<-arg[,c(-1,-8)]
 ```
 
-```{r, echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #salle de cinéma pour 100 000 habitants
 arg$movie_theatres_per_100000<-arg$movie_theatres_per_cap*100000
 ```
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #retire Buenos Aires
 arg<-arg[-1,]
 ```
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 arg<-arg[,c("poverty","no_healthcare","illiteracy","gdp_per_cap","movie_theatres_per_100000")]
 ```
 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 library(rstatix)
 library(kableExtra)
 stat_desc <- get_summary_stats(arg, show = c("mean", "min","max"))
 kable(stat_desc, digits =2) %>% kable_classic()
 ```
 
-En Argentine, le PIB par habitant moyen, toutes provinces confondues est d'environ 18 dollars. Le PIB/hab le plus faible parmi toute les régions s'élève à environ 7 dollars quand le plus élevé s'élève à 42 dollars environ. Il y a sans doute des disparités entre les provinces, et le PIB/hab rend compte de cela : des provinces sont développées quand d'autre ne le sont pas/le sont moins.
+En Argentine, le PIB par habitant moyen, toutes provinces confondues, est d'environ 18 dollars. Le PIB/hab le plus faible parmi toutes les régions s'élève à environ 7 dollars quand le plus élevé s'élève à 42 dollars environ. Il y a sans doute des disparités entre les provinces, et le PIB/hab rend compte de cela : des provinces sont développées quand d'autre ne le sont pas/le sont moins.
 
 Le taux de pauvreté moyen est de 10%. Le taux le plus élevé est de 17% quand le taux le plus faible est de 3%.
 
-Concernant l'accès aux soins, il est en moyenne de 50%. La disparité entre la province qui a le taux d'accès aux soins la plus faible et celle ayant le taux le plus fort est de l'ordre d'un peu plus de 2 fois plus. L'écart n'est pas très grand si l'on regarde les autres écarts (entre min. et max. des autres variables prises en compte).
+Concernant l'accès aux soins, il est en moyenne de 50%. La disparité entre la province qui a le taux d'accès aux soins la plus faible et celle ayant le taux le plus élevé est de l'ordre d'environ deux fois plus. L'écart n'est pas très grand si l'on regarde les autres écarts (entre min. et max. des autres variables prises en compte).
 
-Après avoir vu un résumé statistique de nos variables, réduisons maintenant nos dimensions : au lieu d'avoir plusieurs variables, tentons de les regrouper entre elles (celles qui sont similaires, qui rendent compte de la même chose, résumons les sur un même axe).
+Après avoir vu un résumé statistique de nos variables, réduisons maintenant nos dimensions : au lieu d'avoir plusieurs variables, tentons de les regrouper entre elles (résumons sur un même axe celles qui sont similaires, qui rendent compte de la même chose).
 
-# Résultats empiriques 
+# **Résultats empiriques**
 
-## Corrélations entre nos variables
+## ***[Corrélations entre nos variables]{style="color:#234099"}***
 
 Tout d'abord nous devons nous assurer que nos variables ont un lien entre elles, sinon notre étude n'a pas de sens.
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 mat_r <- cor(arg)
 library(corrplot)
 corrplot(mat_r, method="circle",type = "lower")
@@ -143,56 +147,56 @@ corrplot(mat_r, method="circle",type = "lower")
 Ici c'est bien le cas : elles ont un lien soit positif soit négatif et qui est fort dans tous les cas.
 
 
-De même, nous devons nous assurer que la réduction des dimensions est possible et pertiente. Pour cela nous utilisons un test statistique : le test de Bartlett. Si l'hypothèse nulle (H0) -qui est qu'il n'y a pas de lien, pas de corrélation entre toute les variables- est rejetté alors cela signfie qu'au contraire, il y a bien une relation entre elles. 
+De même, nous devons nous assurer que la réduction des dimensions est possible et pertiente. Pour cela nous utilisons un test statistique : le test de Bartlett. Si l'hypothèse nulle (H0) -qui est qu'il n'y a pas de lien, pas de corrélation entre toutes les variables- est rejetté alors cela signfie qu'au contraire, il y a bien une relation entre elles.
 C'est simplement une façon théorique et formelle de procéder. Ici nous rejettons bien cette hypothèse nulle (cf.annexe n°1) : il y a une relation très signficative entre nos variables. Nous pouvons alors passer à l'étape de l'analyse factorielle (réduction des dimensions).
 
 
-## Réduction des dimensions, analyse factorielle :
+## ***[Réduction des dimensions, analyse factorielle :]{style="color:#234099"}***
 
 ### Choix du nombre d'axe
 
-```{r, echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 library(FactoMineR)
 library(factoextra)
 res.pca = PCA(arg, graph = F )
 fviz_eig(res.pca, addlabels = T)
 ```
 
-La réduction des dimensions consiste en extraire le minimum de facteur pour tenter d'expliquer le maximum du lien entre eux. Dit autrement, elle consiste en choisir le plus petit nombre possible de dimensions/axes/composantes principales interpretables qui permettent toutefois de capter un maximum d'information. Nous choisissons ce nombre "idéal" à l'aide d'une representation graphique : le "Scree Plot".
+La réduction des dimensions consiste en extraire le minimum de facteur pour tenter d'expliquer le maximum du lien entre eux. Dit autrement, elle consiste en choisir le plus petit nombre possible de dimensions/axes/composantes principales interpretables qui permettent toutefois de capter un maximum d'informations. Nous choisissons ce nombre "idéal" à l'aide d'une représentation graphique : le "Scree Plot".
 
 Ici, on constate qu'en prenant en compte deux dimensions nous pouvons expliquer près de 84% de la variance ce qui nous convient. De même, il y a une rupture de pente après la seconde dimension ce qui nous indique que prendre en compte deux diemnsions est sans doute le choix le plus pertinent.
 
 
 ### Representation des variables sur les axes en question 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #VAR:
 fviz_contrib(res.pca, choice = "var", axes = 1)
 fviz_contrib(res.pca, choice = "var", axes = 2)
 ```
 
-Comme dit plus haut, nous choissons deux axes. 
+Comme dit plus haut, nous choissons donc deux axes.
 
 Les variables qui contribuent le plus au premier axe sont les variables "*no_healthcare*" et "*illiteracy*". On pourrait alors penser que ce premier axe constituerait notre axe "**Provinces les moins developpées**". Ainsi, les individus se situant sur la projection de ces variables feraient parti, a priori, des provinces les moins développées.
 
-Aussi, les variables qui contribuent le plus au second axe sont les variables "*poverty*", "*gdp_per_cap*" et "*movie_theatres_per_100000*". On pourrait alors penser que ce second axe constituerait notre axe "**Provinces les plus développées**". Ce seraient donc toute les provinces ayant un PIB/habitant élevé, le plus de salles de cinémas pour 100 000 habitants et le moins de pauvreté qui se situeraient sur la projection de cet axe.
+Aussi, les variables qui contribuent le plus au second axe sont les variables "*poverty*", "*gdp_per_cap*" et "*movie_theatres_per_100000*". On pourrait alors penser que ce second axe constituerait notre axe "**Provinces les plus développées**". Ce seraient donc toutes les provinces ayant un PIB/habitant élevé, le plus de salles de cinémas pour 100 000 habitants et le moins de pauvreté qui se situeraient sur la projection de cet axe.
 
 La qualité globale de ces variables en terme de representation sur les axes est plutôt bonne (cf. annexe n°2) même si la representation sur l'axe 1 est meilleure.
 
 
 ### Representation des individus sur les axes en question
 
-```{r, echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 fviz_contrib(res.pca , choice = "ind", axes = 1)
 fviz_contrib(res.pca , choice = "ind", axes = 2)
 ```
 
-En ce qui conerne les individus, on constate également qu'ils contribuent plus à l'axe 1 qu'à l'axe 2. On peut alors imaginer que la repartition des variables et des individus sera assez horizontale. Nous allons voir cela dès à présent .
+En ce qui conerne les individus, on constate également qu'ils contribuent plus à l'axe 1 qu'à l'axe 2. On peut alors imaginer que la répartition des variables et des individus sera assez horizontale. Nous allons voir cela dès à présent.
 
 
 ### Résumé en ce qui concerne les variables : cercle de correlation 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #VAR
 fviz_pca_var(res.pca , col.var = "cos2", repel = TRUE)
 ```
@@ -201,14 +205,14 @@ Que ce soit en terme de qualité de la représentation sur les axes ou de contri
 
 Ce graphique nous permet notamment de voir que nos variables sont plutôt bien representées car sont proches de la bordure du cercle (les flèches sont assez longues).
 
-De même, il nous permet de voir que les variables d'analphabetiseme, de non-accès aux soins de santé et de pauvreté sont plutôt corrélées entre elles (ce qui confirme ce que nous avons vu plus haut dans le graphique représentant les corrélation deux à deux). Nous pouvons dire cela car l'angle entre ces variables est aigü. Aussi, les variables PIB/habitant et nombre de salle de cinéma pour 100 000 habitants sont aussi corrélées entre elles (angle aigü également). 
+De même, il nous permet de voir que les variables d'analphabetisme, de non-accès aux soins de santé et de pauvreté sont plutôt corrélées entre elles (ce qui confirme ce que nous avons vu plus haut dans le graphique représentant les corrélation deux à deux). Nous pouvons dire cela car l'angle entre ces variables est aigu. Aussi, les variables PIB/habitant et nombre de salle de cinéma pour 100 000 habitants sont aussi corrélées entre elles (angle aigu également).
 
 Supperposons maintenant nos individus sur nos variables ainsi représentées dans un graphique. Cela nous permettera notamment d'avoir une idée des groupes que nous pouvons former. 
 
 
-### Le biplot ou la representation des variables ainsi que des individus sur les deux axes choisis/composantes principales
+### Le biplot ou la representation des variables ainsi que des individus sur les deux axes choisis (les composantes principales)
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #VAR et IND
 fviz_pca_biplot(res.pca, repel = TRUE, pointsize = "cos2" )
 #peut faire 2 groupes : regions dvlp et regions pauvres.
@@ -217,16 +221,16 @@ fviz_pca_biplot(res.pca, repel = TRUE, pointsize = "cos2" )
 
 Ce graphique nous permet en effet d'avoir une idée du clustering qui pourra être fait : les provinces les plus développées se situeraient à gauche quand les provinces les moins developpées se situeraient à droite.
 On peut d'ailleurs anticiper que le groupe des provinces les plus developpées sera plus grand, plus dispersé (aura une variance intra groupe assez élevé) dans la mesure où il y a des provinces qui se caractérisent par un fort PIB/habitant (Santa Cruz notamment) mais egalement des provinces qui se caracterisent plutôt par un fort nombre de salle de cinéma pour 100 000 habitants (La Pampa notamment).
-Enfin, on peut egalement ajouter que certains individus (ceux qui se situent au milieu du graphique) sont moins bien representés que les autres (ils ont un $cos^2$ plus faible). 
+Enfin, on peut également ajouter que certains individus (ceux qui se situent au milieu du graphique) sont moins bien representés que les autres (ils ont un $cos^2$ plus faible). 
 
 Maintenant que nous avons choisis nos deux axes, étape primordiale pour réaliser notre étude, rentrons dans le vif du sujet : qu'elles sont les provinces les plus dévéloppées et qu'elles sont celles qui ne le sont pas (ou qui le sont moins) ? 
 Pour répondre à cette question, nous utiliserons des lagorithmes de partionnement et deux en particuliers : celui des K-means et le Custering Ascendant Hierarchique (CAH). Nous verrons que ces deux algorithmes produisent le même résultat, les mêmes regroupements ce qui rend compte de la robustesse de nos modèles.
 
 
-## Clustering : regroupement
+## ***[Clustering : regroupement]{style="color:#234099"}***
 
 ### Matrice des distances
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #matrice des distances :
 distanceE <- dist(arg, method ="euclidean")
 fviz_dist(distanceE,
@@ -236,9 +240,9 @@ fviz_dist(distanceE,
 Nous commençons d'abord par faire une matrice des distances. Elle rend compte de la plus ou moins proximité de certains individus entre eux. Nous pouvons alors dire que les indiivdus en orange feront parti d'un groupe et ceux en gris feront parti d'un autre groupe. 
 Toutefois, nous n'avons pas d'information sur les groupes en question : ce sont les oranges ou les gris qui sont les plus developpées ?
 
-### K-means :
+### K-means
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 km1 <- kmeans(arg, centers =
                 2, nstart = 25)
 #la variance entre les groupes est assez élevé : ≈56%. Nous pourrions faire mieux en partitionnant en 3 groupes par exemple mais ce n'est pas ce qui est voulu.
@@ -251,7 +255,7 @@ L'algorithme des K-means nous permet alors de voir que le cluster n°1 est le gr
 *Nb : nous aurions pu faire plus de deux groupes et utiliser des outils de visualisation (tel que l'indice "silhouette", le "coude d'effondrement" ou encore l'écart statistique) pour nous aider à determiner le nombre optimal de cluster à faire. Ce n'est pas ce que nous avons fait car l'objet de notre étude est de faire __deux__ groupes pour ensuite extraire parmi l'un des deux les deux provinces les moins developpées et parmi l'autre les deux provinces les plus developpées. Notons toutefois que ces indicateur concernant le nombre de cluster idéal nous signal aussi de faire 2 groupes (cf. annexe n°5)*
 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #tableau de synthese :
 library(dplyr)
 library(kableExtra)
@@ -272,7 +276,7 @@ Avant de determiner les deux provinces les plus developpées parmi l'ensemble de
 
 ### Classification Ascendante Hierarchique (CAH)
 
-```{r, echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 #centre-reduit :
 arg <- scale(arg)
 
@@ -301,7 +305,7 @@ A present, nous allons determiner qu'elles sont en particulier **les deux provin
 
 ### Les deux pronvinces les plus développées 
 
-```{r, echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 arg2 <- read.csv(file = "https://48652267-876637319111280815.preview.editmysite.com/uploads/4/8/6/5/48652267/argentina.csv",
          header = T,
          sep = ",")
@@ -317,7 +321,7 @@ arg2<-arg2[,c("province","poverty","no_healthcare","illiteracy","gdp_per_cap","m
 ```
 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 dev <- subset(arg2, province=="La Pampa" | province=="Chubut" | province=="Cordoba" | province =="Catamarca" | province =="La Rioja" | province=="Entre-Rios" | province =="Rio-Negro" | province=="Mendoza" | province=="Santa Fe" | province =="San Luis" | province=="Neuquen"|province=="Santa Cruz")
 
 arg2<-arg2[,c("province","gdp_per_cap","movie_theatres_per_100000")] #les variables de richesses avec "province"
@@ -349,7 +353,7 @@ Il en est de même si l'on se base sur le second score de richesse que nous avon
 
 ### Les deux provinces les plus vulnérables 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 arg3 <- read.csv(file = "https://48652267-876637319111280815.preview.editmysite.com/uploads/4/8/6/5/48652267/argentina.csv",
          header = T,
          sep = ",")
@@ -364,7 +368,7 @@ arg3<-arg3[,c("province","poverty","no_healthcare","illiteracy","gdp_per_cap","m
 ```
 
 
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE, message=FALSE}
 arg3<-arg3[,c("province","poverty","no_healthcare","illiteracy")] #les variables de pauvreté
 
 poor <- subset(arg3, province=="Corrientes" | province=="Santiago del Estero" | province=="Misiones" | province =="Salta" | province =="Chaco" | province=="Formosa" | province =="Jujuy" | province=="San Juan" | province=="Tucuman")
@@ -389,21 +393,21 @@ kable(slice(order_mean2, 1:2)) %>% kable_classic()
 De même ici, que l'on se base sur notre premier indicateur de pauvreté constitué de l'addition de notre 3 variables caracteristiques de la vulnérabilité (province par province) ou sur notre second indicateur qui est une moyenne de ces derniers (province par province également), nous arrivons à la même conclusion : ce sont les provinces de **Chaco** et **Formosa** qui sont les provinces les plus vulnérables parmi le groupe de province les plus vulnérables d'Argentine. 
 
 
-# Conclusion et discussion 
+# **Conclusion, recommandations et discussion**
 
-Nous voulions savoir quelles sont les pronvinces qui corresponderaient le plus aux deux profils recherchés à savoir, les 2 provinces les plus developpées et les 2 plus vulnérables. Cela, dans le but de permettre une intervention qui soit la plus efficace possible en ce qui concerne la mise en place des deux programmes "Women Empowerment" et "No-Poor".
+Nous voulions savoir quelles sont les pronvinces qui corresponderaient le plus aux deux profils recherchés à savoir, les 2 provinces les plus developpées (exception faite de Buenos Aires) et les 2 plus vulnérables. Cela, dans le but de permettre une intervention qui soit la plus efficace possible en ce qui concerne la mise en place des deux programmes "Women Empowerment" et "No-Poor".
 
-Notre étude nous permet alors de dire que, pour que l'intervention de l'UNICEF Argentine soit la plus efficace possible, le programme "Women empowerment" doit être mise en place dans les provinces de **Chaco** et **Farmosa** située au Nord du pays. Pour rappel, ce programme permetterait aux mères seules avec enfants de voir leurs capacités d'autonomisation renforcées.
-Quant au programme "No-Poor", il devrait plutôt être mis en place dans les provinces de **Santa Cruz** et **Neuquen**, provinces developpées. Pour rappel, ce dernier permettrait alors aux personnes y résidents de ne pas tomber sous le seuil de pauvreté.
+Notre étude nous permet alors de dire que, pour que l'intervention de l'UNICEF Argentine soit la plus efficace possible, <mark>le programme "Women empowerment" doit être mise en place dans les provinces de **Chaco** et **Farmosa** située au Nord du pays</mark>. Pour rappel, ce programme permetterait aux mères seules avec enfants de voir leurs capacités d'autonomisation renforcées.
+Quant au <mark>programme "No-Poor", il devrait plutôt être mis en place dans les provinces de **Santa Cruz** et **Neuquen**, provinces developpées</mark>. Pour rappel, ce dernier permettrait alors aux personnes y résidents de ne pas tomber sous le seuil de pauvreté.
 
 
 Nonobstant, les indicatuers de richesse et de pauvreté dont nous disposons auraient pu être tout autre : taux de chômage, taux d'inflation, taux d'emploi informelle ... Ceci aurait pu changer notre analyse et nos résultats : d'autres provinces auraient pu être considérées comme les plus vulnérables, de même pour les provinces considérées comme les plus riches. 
 Ceci rend donc compte du fait que le choix des indicateurs n'est pas neutre, il permet de dire tel chose et pas tel autre. Quoiqu'il en soit, si l'on se base sur les indicateurs que nous avons à notre dispositions, nos résultats sont ceux cités plus haut. Et tout porte à croire que nos conclusions sont cohérente et robustes puisque sont similaires quelque soit la méthode de partitionnement adoptée.
 
 
-# Annexe 
+# **Annexe**
 
-## Annexe partie 1
+## Annexe - partie 1
 
 **Annexe n°1**
 ```{r, echo=FALSE,warning=FALSE}
@@ -468,8 +472,8 @@ ac <- function(x)
 agnes(distanceE, method = x)$ac
 map_dbl(m, ac) 
 ```
-On constate qu'en utilisant la fonction AGNES, c'est avec la méthode de ward que le coefficient d'agglomération est le plus élevé (0.91).
-Nous avons donc utiliser la fonction AGNES avec la méthode de Ward pour faire notre classification (c'est celle qui donne le meilleure coefficient d'agglomeration).
+On constate qu'en utilisant la fonction AGNES, c'est avec la méthode de ward que le coefficient d'agglomération est le plus élevé (0.91)
+Nous avons utiliser la fonction AGNES avec la méthode de Ward pour faire notre classification. En efft, c'est celle qui donne le meilleure coefficient d'agglomeration. 
 
 
 Le dendogramme en question :
@@ -482,7 +486,7 @@ Nous l'avons visualiser d'une autre façon dans le corps de l'étude.
 
 
 
-## Annexe partie 2 - code R
+## Annexe partie 2 (code R)
 
 
 ```{r,echo=TRUE,eval=FALSE}
@@ -614,12 +618,11 @@ Visualisation du dendogramme :
 # Dendrogramme horizontal
 a2 <- agnes(distanceE, method = "ward")
 pltree(a2, cex = 0.6, hang = -1, main = "Dendrogramme (AGNES)")
-
 fviz_dend(a2 , k = 2, cex =
             0.55 , horiz = TRUE , rect = TRUE ,
           rect_border = "jco", rect_fill = TRUE ,
           main =
-            "Dendrogramme horizontal")+
+            "Dendrogramme avec f viz dend")+
   theme_minimal()
 
 # Dendrogramme circulaire
