Update and rename index.rmd to rapport_satistique.rmd

--- a/rapport_satistique.rmd
+++ b/rapport_satistique.rmd
@@ -1,6 +1,6 @@
 ---
 title: <center> Rapport d'étude statistique pour UNICEF Argentine </center>
-date: "`r Sys.Date()`"
+date: "12 mars 2022"
 author : "Rahma GUETIB M1 MECI - cabinet d'étude SOCIODEV"
 output:
   rmdformats::downcute:
